Used a different garbage collector